Add game dev blog

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -17,8 +17,8 @@ permalink: /
 <h2 class="mt3r section-header">Writing &amp; Talks</h2>
 
 <div class="items">
-  <!-- <h3><a class="black-80 hover-dark-red" href="/blog/game-dev">Game dev blog</a></h3>
-  <p>Follow along as I make some sweet 2D games</p> -->
+  <h3><a class="black-80 hover-dark-red" href="/blog/game-dev">Game dev blog</a></h3>
+  <p>Follow along as I experiment with making 2D games</p>
 
   <h3><a class="black-80 hover-red" href="/rubyconf">Reimagining 2D graphics and game development with Ruby</a></h3>
   <p>RubyConf 2017 — November 15, 2017</p>
