--- a/_pages/index.html
+++ b/_pages/index.html
@@ -25,8 +25,8 @@ permalink: /
   <h3><a href="/blog/ruby-on-webassembly">Ruby on WebAssembly</a></h3>
   <p>What's the big deal with WebAssembly, and what does it mean for Ruby? — April 28, 2018</p>
 
-  <h3><a href="/blog/game-dev">Game dev blog</a></h3>
-  <p>Follow along as I experiment with making 2D games</p>
+  <!-- <h3><a href="/blog/game-dev">Game dev blog</a></h3> -->
+  <!-- <p>Follow along as I experiment with making 2D games</p> -->
 
   <h3><a href="/rubyconf">Reimagining 2D graphics and game development with Ruby</a></h3>
   <p>RubyConf 2017 — November 15, 2017</p>
