--- a/_pages/index.html
+++ b/_pages/index.html
@@ -14,7 +14,7 @@ permalink: /
     <p>A Ruby gem for creating cross-platform 2D applications</p>
   </div>
   <div>
-    <h3><a href="http://www.simple2d.com">Simple 2D</a></h3>
+    <h3><a href="https://github.com/simple2d/simple2d">Simple 2D</a></h3>
     <p>A small, native 2D graphics engine</p>
   </div>
 </div>
